# dataloader

./: CMakeLists.txt  Doxyfile  LICENSE  README.md  checkerstests.cpp  dataloadertests.cpp
.github/workflows/: build_and_test.yml  docs.yml
examples/: CMakeLists.txt  README.md
examples/intvector/: README.md  main.cpp
examples/multiple/: main.cpp
examples/pointvector/: README.md  main.cpp
examples/protocol/: README.md  main.cpp
examples/repeat/: main.cpp
examples/simple/: main.cpp
examples/single/: main.cpp
examples/string/: main.cpp
includes/: checkers.h  data_loader.h
